# CondensedFEMModel

./: .gitignore  CMakeLists.txt  CondensedFEMModelConfig.cmake.in  README.md  main.py
Applications/: AcquireData.py  DataAnalysis.py  DesignOptimization.py  GetWFromDesignParams.py  NetworkHyperparametersOptimisation.py  PrepareForReality.py  TestQPGUI.py  TestSimu.py  Training.py
EmbeddedControl/: HardwareController.py  PaulHardwareController.py  PneumaticTrunk.py  README.md  SofaController.py  main_hardware_control.py  test_embedding_HARDWARE.py  test_embedding_SOFA.py  utils.py
EmbeddedControl/Data/: init_data.txt  network_parameters.txt  scaling.txt
EmbeddedControl/Mesh/: FinePneumaticTrunk_module_0.txt  MediumPneumaticTrunk_module_0.txt  MediumPneumaticTrunk_module_1.txt  PneumaticTrunk_module_0.txt  PneumaticTrunk_module_1.txt
Libraries/: BaseConfig.py  database.py  geometry.py  utils.py
Libraries/Learning/: DataSetManager.py  normalization.py
Libraries/Learning/MLP/: learning_tools.py
Libraries/Simulation/: BaseController.py  sofa_utils.py
Libraries/Simulation/DirectControllers/: BaseVisualizationController.py
Libraries/Simulation/QPControllers/: BaseQPController.py  QPControllerContact.py  QPControllerContactBilateral.py  QPControllerCouple.py  QPControllerSimple.py  QPproblem.py  (+1 more)
Models/2Finger/: Config.py  Finger.py
Models/3BilateralFinger/: BilateralFinger.py  Config.py  Cube.py
Models/3ContactFinger/: Config.py  ContactFinger.py
Models/AbstractPneumaticTrunk/: AbstractPneumaticTrunk.py  AbstractPneumaticTrunkConfig.py
Models/CoarsePneumaticTrunk/: CoarsePneumaticTrunk.py  Config.py
Models/CoarsePneumaticTrunk1Effector/: Config.py
Models/ContactCubeFinger/: Config.py  ContactFinger.py  Cube.py
Models/ContactFinger/: Config.py  ContactFinger.py
Models/Diamond/: Config.py  Diamond.py
Models/FinePneumaticTrunk/: Config.py  FinePneumaticTrunk.py
Models/Finger/: Config.py  Finger.py
Models/FingerDesign/: Config.py  FingerDesign.py
Models/FingerDesignLength/: Config.py  FingerDesignLength.py  Generation.py  MoldGeneration.py
Models/FingerElasticityParams/: Config.py  FingerElasticityParams.py
Models/FingerFine/: Config.py  FingerFine.py
Models/FingerFineFine/: Config.py  FingerFineFine.py
Models/MediumPneumaticTrunk/: Config.py  MediumPneumaticTrunk.py
Models/Sampling3BilateralFinger/: BilateralFinger.py  Config.py  Cube.py
Models/Sampling3ContactFinger/: Config.py  ContactFinger.py  Cube.py
Models/Trunk/: Config.py  Trunk.py
Results/DesignOptimization/: plot_history.py
Results/Trajectories/: compute_error.py  print_trajectory.py  print_trajectory_design.py  print_trajectory_workspace.py
src/CondensedFEMModel/: config.h.in  init.cpp
src/CondensedFEMModel/binding/: Binding_CondensedFEMModel.cpp  Binding_CondensedFEMModel.h  CMakeLists.txt  Module_CondensedFEMModel.cpp
(+39 files in other folders)
